[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/kz_debugger/plug_debug_win.gd" type="Script" id=1]
[ext_resource path="res://addons/kz_debugger/assets/heart_1_size-removebg-preview.png" type="Texture" id=2]
[ext_resource path="res://addons/kz_debugger/assets/refresh.png" type="Texture" id=3]

[node name="WindowDialog" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1189.0
margin_top = 796.0
margin_right = 665.0
margin_bottom = 396.0
rect_min_size = Vector2( 500, 200 )
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="topBarCol" type="ColorRect" parent="."]
margin_right = 492.0
margin_bottom = 25.0
rect_min_size = Vector2( 492, 25 )
color = Color( 0.8, 0.819608, 0.784314, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 492.0
margin_bottom = 25.0
rect_min_size = Vector2( 492, 25 )
alignment = 2

[node name="sponsor" type="TextureButton" parent="HBoxContainer"]
margin_left = 95.0
margin_right = 119.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 2 )
expand = true

[node name="refresh" type="TextureButton" parent="HBoxContainer"]
margin_left = 123.0
margin_right = 147.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 3 )
expand = true

[node name="dock" type="Button" parent="HBoxContainer"]
margin_left = 151.0
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
text = "DOCK"

[node name="resnap" type="Button" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 265.0
margin_bottom = 25.0
text = "RESNAP"

[node name="default_pos" type="Button" parent="HBoxContainer"]
margin_left = 269.0
margin_right = 338.0
margin_bottom = 25.0
text = "DEFAULT"

[node name="options" type="Button" parent="HBoxContainer"]
margin_left = 342.0
margin_right = 413.0
margin_bottom = 25.0
text = "OPTIONS"

[node name="clear" type="Button" parent="HBoxContainer"]
margin_left = 417.0
margin_right = 468.0
margin_bottom = 25.0
text = "CLEAR"

[node name="quite" type="Button" parent="HBoxContainer"]
margin_left = 472.0
margin_right = 492.0
margin_bottom = 25.0
text = "X"

[node name="text_bg_color" type="ColorRect" parent="."]
margin_top = 29.0
margin_right = 492.0
margin_bottom = 196.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = 29.0
margin_right = 492.0
margin_bottom = 196.0
focus_mode = 2
bbcode_enabled = true
bbcode_text = "[center][color=gray]---- kzCode_ Debugger ----[/color][/center]
"
text = "---- kzCode_ Debugger ----
"
scroll_following = true
selection_enabled = true
override_selected_font_color = true

[connection signal="pressed" from="HBoxContainer/sponsor" to="." method="_on_sponsor_pressed"]
[connection signal="pressed" from="HBoxContainer/refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="HBoxContainer/dock" to="." method="_on_dock_pressed"]
[connection signal="pressed" from="HBoxContainer/resnap" to="." method="_on_resnap_pressed"]
[connection signal="pressed" from="HBoxContainer/default_pos" to="." method="_on_default_pos_pressed"]
[connection signal="pressed" from="HBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="HBoxContainer/quite" to="." method="_on_quite_pressed"]
[connection signal="meta_clicked" from="RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
